--- a/Coco bongo.html
+++ b/Coco bongo.html
@@ -125,31 +125,33 @@
     <main>
         <div class="producto-card">
             <img src="paginas/cocobongo1.jpg" alt="Producto 1">
-            <h3>Producto 1</h3>
-            <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
-            <div class="precio">$150</div>
+            <h3>STANDARD</h3>
+            <p>includes entrance fee and open bar domestic beverages, package available from Tuesday to Sunday.
+            </p>
+            <div class="precio">$90</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
-
+ss
         <div class="producto-card">
             <img src="paginas/cocobongo2.jpeg" alt="Producto 2">
-            <h3>Producto 2</h3>
-            <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
-            <div class="precio">$200</div>
+            <h3>Gold member</h3>
+            <p>includes entrance and Open bar of the Gold member area NOT INCLUDING SEATS package available from Tuesday to Sunday.
+            </p>
+            <div class="precio">$125</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="paginas/cocobongo3.webp" alt="Producto 3">
-            <h3>Producto 3</h3>
-            <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
-            <div class="precio">$120</div>
+            <h3>FRONT ROW Vip</h3>
+            <p> includes entrance to FRONT ROW Vip area, with the best view of the shows, in a preferential area (limited number of people) with 💺 seats, Premium drinks and fast entrance. Tuesday packages available</p>
+            <div class="precio">$190</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
     </main>
