--- a/SHOPPING.html
+++ b/SHOPPING.html
@@ -125,31 +125,31 @@
     <main>
         <div class="producto-card">
             <img src="paginas/shopping1.jpg" alt="Producto 1">
-            <h3>Producto 1</h3>
-            <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
-            <div class="precio">$150</div>
+            <h3>1 PAX</h3>
+            <p>Immerse yourself in the vibrant culture of the Dominican Republic with a unique shopping experience. Explore local markets and stores where you can find handcrafted souvenirs, traditional Dominican products, and vibrant textiles. Your guide will introduce you to the rich cultural heritage of the island, from locally made cigars to artisan jewelry and tropical spices. Enjoy the opportunity to interact with local artisans and discover the stories behind the crafts. This excursion offers a perfect blend of shopping and culture, allowing you to take home a piece of the Dominican Republic's authentic charm.</p>
+            <div class="precio">$FREE</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="paginas/shopping2.webp" alt="Producto 2">
-            <h3>Producto 2</h3>
-            <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
-            <div class="precio">$200</div>
+            <h3>2 PAX</h3>
+            <p>Immerse yourself in the vibrant culture of the Dominican Republic with a unique shopping experience. Explore local markets and stores where you can find handcrafted souvenirs, traditional Dominican products, and vibrant textiles. Your guide will introduce you to the rich cultural heritage of the island, from locally made cigars to artisan jewelry and tropical spices. Enjoy the opportunity to interact with local artisans and discover the stories behind the crafts. This excursion offers a perfect blend of shopping and culture, allowing you to take home a piece of the Dominican Republic's authentic charm.</p>
+            <div class="precio">$FREE</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="paginas/shopping3.jpg" alt="Producto 3">
-            <h3>Producto 3</h3>
-            <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
-            <div class="precio">$120</div>
+            <h3>10 PAX</h3>
+            <p>Immerse yourself in the vibrant culture of the Dominican Republic with a unique shopping experience. Explore local markets and stores where you can find handcrafted souvenirs, traditional Dominican products, and vibrant textiles. Your guide will introduce you to the rich cultural heritage of the island, from locally made cigars to artisan jewelry and tropical spices. Enjoy the opportunity to interact with local artisans and discover the stories behind the crafts. This excursion offers a perfect blend of shopping and culture, allowing you to take home a piece of the Dominican Republic's authentic charm.</p>
+            <div class="precio">$FREE</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
     </main>
