--- a/Santo Domingo.html
+++ b/Santo Domingo.html
@@ -126,31 +126,31 @@
     <main>
         <div class="producto-card">
             <img src="assets/img/santo-domingo1.jpg" alt="Producto 1">
-            <h3>Producto 1</h3>
-            <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
-            <div class="precio">$150</div>
+            <h3>1 PAX</h3>
+            <p>Enjoy a comprehensive tour of the historic city of Santo Domingo. Visit the stunning Three Eyes Monument, followed by a trip to the Columbus Lighthouse, dedicated to Christopher Columbus. Stroll along the Malecón, enjoying beautiful sea views, and savor a meal at a local restaurant. Discover the majestic architecture of the Presidential Palace and explore the Colonial Zone, home to the Cathedral of Santa María la Menor, the oldest cathedral in the Americas. A knowledgeable guide will accompany you throughout this fascinating journey.</p>
+            <div class="precio">$60</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/santo-domingo2.jpg" alt="Producto 2">
-            <h3>Producto 2</h3>
-            <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
-            <div class="precio">$200</div>
+            <h3>2 PAX</h3>
+            <p>Enjoy a comprehensive tour of the historic city of Santo Domingo. Visit the stunning Three Eyes Monument, followed by a trip to the Columbus Lighthouse, dedicated to Christopher Columbus. Stroll along the Malecón, enjoying beautiful sea views, and savor a meal at a local restaurant. Discover the majestic architecture of the Presidential Palace and explore the Colonial Zone, home to the Cathedral of Santa María la Menor, the oldest cathedral in the Americas. A knowledgeable guide will accompany you throughout this fascinating journey.</p>
+            <div class="precio">$120</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/santo-domingo3.webp" alt="Producto 3">
-            <h3>Producto 3</h3>
-            <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
-            <div class="precio">$120</div>
+            <h3>10 PAX</h3>
+            <p>Embark on a personalized experience with private transport and a dedicated guide. Start with a visit to the Three Eyes Monument, then head to the Columbus Lighthouse, a tribute to Christopher Columbus. Walk along the Malecón, enjoying ocean views, and enjoy lunch at a local restaurant. Visit the Presidential Palace and explore the Colonial Zone, where you’ll admire the impressive Cathedral of Santa María la Menor. All this, with the comfort and exclusivity of private transport, ensuring a unique and relaxing experience. </p>
+            <div class="precio">$600</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
     </main>
