--- a/delfines.html
+++ b/delfines.html
@@ -125,31 +125,31 @@
     <main>
         <div class="producto-card">
             <img src="paginas/delfines1.jpg" alt="Producto 1">
-            <h3>Producto 1</h3>
-            <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
-            <div class="precio">$150</div>
+            <h3>1 PAX</h3>
+            <p>Enjoy a thrilling excursion filled with marine life encounters! Start your adventure with an exciting dolphin interaction, where you can get up close with these playful creatures. Next, watch an amazing dolphin show showcasing their incredible skills. The fun continues with a vibrant parrot show, featuring colorful birds in a stunning performance, followed by a captivating sea lion show that will leave you in awe. This action-packed experience offers a unique opportunity to interact with and observe these incredible animals in a safe, unforgettable environment.</p>
+            <div class="precio">$110</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="paginas/delfines2.jpg" alt="Producto 2">
-            <h3>Producto 2</h3>
-            <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
-            <div class="precio">$200</div>
+            <h3>2 PAX</h3>
+            <p>Enjoy a thrilling excursion filled with marine life encounters! Start your adventure with an exciting dolphin interaction, where you can get up close with these playful creatures. Next, watch an amazing dolphin show showcasing their incredible skills. The fun continues with a vibrant parrot show, featuring colorful birds in a stunning performance, followed by a captivating sea lion show that will leave you in awe. This action-packed experience offers a unique opportunity to interact with and observe these incredible animals in a safe, unforgettable environment.</p>
+            <div class="precio">$220</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="paginas/delfines3.jpg" alt="Producto 3">
-            <h3>Producto 3</h3>
-            <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
-            <div class="precio">$120</div>
+            <h3>10 PAX</h3>
+            <p>Enjoy a thrilling excursion with private transport, starting with a unique dolphin interaction where you’ll get up close to these playful creatures. Next, watch an incredible dolphin show showcasing their amazing talents. The excitement continues with a colorful parrot show, followed by a captivating sea lion performance. With exclusive transport, you’ll experience these unforgettable animal encounters in comfort and style. This personalized adventure promises an exciting day of marine life and spectacular shows.</p>
+            <div class="precio">$1050</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
     </main>
