--- a/isla-catalina.html
+++ b/isla-catalina.html
@@ -125,33 +125,32 @@
 
     <main>
         <div class="producto-card">
-            <img src="assets/img/islacatalina1.jpg" alt="Producto 1">
-            <h3>Producto 1</h3>
+            <img src="assets/img/islacatalina1.jpg" alt="1 pax">
+            <h3>1 PAX </h3>
             <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
             <div class="precio">$150</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/Isla-Catalina2.jpg" alt="Producto 2">
-            <h3>Producto 2</h3>
+            <h3>2 PAX </h3>
             <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
             <div class="precio">$200</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/catalina3.jpg" alt="Producto 3">
-            <h3>Producto 3</h3>
+            <h3>10 PAX</h3>
             <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
             <div class="precio">$120</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
-            </a>
+                BOOKING NOW  </a>
         </div>
     </main>
 
