--- a/isla-saona.html
+++ b/isla-saona.html
@@ -125,31 +125,31 @@
     <main>
         <div class="producto-card">
             <img src="assets/img/islacatalina1.jpg" alt="Producto 1">
-            <h3>Producto 1</h3>
-            <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
-            <div class="precio">$150</div>
+            <h3>1 PAX</h3>
+            <p>Embark on an exciting adventure with transport by regular bus and an experienced guide. Cruise the waters on a catamaran, followed by an exhilarating ride on a speedboat. Enjoy a delicious lunch and relax at a natural pool, surrounded by stunning views. Throughout the journey, refreshing drinks are available, and lively animation keeps the atmosphere festive and fun.</p>
+            <div class="precio">$60</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/Isla-Catalina2.jpg" alt="Producto 2">
-            <h3>Producto 2</h3>
-            <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
-            <div class="precio">$200</div>
+            <h3>2 PAX</h3>
+            <p>Embark on an exciting adventure with transport by regular bus and an experienced guide. Cruise the waters on a catamaran, followed by an exhilarating ride on a speedboat. Enjoy a delicious lunch and relax at a natural pool, surrounded by stunning views. Throughout the journey, refreshing drinks are available, and lively animation keeps the atmosphere festive and fun.</p>
+            <div class="precio">$120</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/catalina3.jpg" alt="Producto 3">
-            <h3>Producto 3</h3>
-            <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
-            <div class="precio">$120</div>
+            <h3>10 PAX</h3>
+            <p>Enjoy a personalized experience with private transport and a dedicated guide. Set sail on a catamaran, followed by an exciting speedboat ride. Indulge in a delicious lunch and unwind at a beautiful natural pool. Stay refreshed with drinks available throughout, while onboard animation ensures a lively and entertaining atmosphere. The luxury of private transport guarantees a comfortable and exclusive adventure. </p>
+            <div class="precio">$600</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
     </main>
