--- a/saona-island-excursion-private-boat-from-10-to-60-people-all-incluided.html
+++ b/saona-island-excursion-private-boat-from-10-to-60-people-all-incluided.html
@@ -125,33 +125,14 @@
     <main>
         <div class="producto-card">
             <img src="assets/img/speed1.jpeg" alt="Producto 1">
-            <h3>Producto 1</h3>
-            <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
-            <div class="precio">$150</div>
+            <h3>From 10 to 60 PAX</h3>
+            <p>Enjoy a unique experience with private ground transportation, an expert tour guide, and everything you need for an amazing day. The tour includes refreshing alcoholic beverages and a selection of tropical fruits for you to enjoy as you explore. Relax and savor a delicious local lunch, accompanied by onboard entertainment and music that will make the atmosphere even more fun. A day full of adventure and enjoyment, with everything organized for your comfort and pleasure. </p>
+            <div class="precio">$2600.00</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
-
-        <div class="producto-card">
-            <img src="assets/img/speed2.jpeg" alt="Producto 2">
-            <h3>Producto 2</h3>
-            <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
-            <div class="precio">$200</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
-            </a>
-        </div>
-
-        <div class="producto-card">
-            <img src="assets/img/speed3.jpeg" alt="Producto 3">
-            <h3>Producto 3</h3>
-            <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
-            <div class="precio">$120</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
-            </a>
-        </div>
+    
     </main>
 
     <footer>
