--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -89,7 +89,7 @@
             color: white;
         }
     </style>
-</head>
+</head>S
 <body>
     <header>
         <!-- Botón de salida (regresar) en la esquina superior derecha -->
