--- a/Aventura-en-buggy.html
+++ b/Aventura-en-buggy.html
@@ -124,32 +124,32 @@
 
     <main>
         <div class="producto-card">
-            <img src="assets/img/buggys1producto.webp" alt="Producto 1">
-            <h3>Producto 1</h3>
-            <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
-            <div class="precio">$150</div>
+            <img src="assets/img/buggys1producto.webp" alt="1 PAX">
+            <h3>1 PAX</h3>
+            <p>Get ready for an exhilarating Polaris adventure through the diverse terrains of the Dominican Republic. Hop into a powerful Polaris vehicle and navigate through rugged trails, lush forests, and scenic landscapes. Your expert guide will lead you through exciting off-road paths, crossing rivers and exploring hidden gems of nature. This off-road adventure offers a thrilling experience while immersing you in the island's beauty, perfect for adrenaline seekers and nature lovers alike. Discover the Dominican Republic in an entirely new way with this unforgettable Polaris experience.</p>
+            <div class="precio">$90 </div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
-            <img src="assets/img/buggys22producto.webp" alt="Producto 2">
-            <h3>Producto 2</h3>
-            <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
-            <div class="precio">$200</div>
+            <img src="assets/img/buggys22producto.webp" alt="2 PAX Polaris">
+            <h3>1 PAX</h3>
+            <p>Embark on an adrenaline-filled buggy adventure through the stunning landscapes of the Dominican Republic. Explore hidden trails, lush jungles, and scenic countryside as you drive your own buggy, guided by an expert. Along the way, stop at breathtaking viewpoints, cross local rivers, and discover remote villages. Feel the thrill of the ride while immersing yourself in the natural beauty of the island. This exciting excursion offers the perfect combination of adventure and exploration, allowing you to experience the Dominican Republic like never before.</p>
+            <div class="precio">$35</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
-            <img src="assets/img/buggys3producto.webp" alt="Producto 3">
-            <h3>Producto 3</h3>
-            <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
-            <div class="precio">$120</div>
+            <img src="assets/img/buggys3producto.webp" alt="10 PAX Polaris">
+            <h3>10 PAX</h3>
+            <p>Enjoy an exciting family-friendly Polaris adventure with private transport, designed for all ages to experience the beauty of the Dominican Republic together. Hop into your Polaris vehicle and embark on a thrilling off-road journey, exploring rugged trails, lush forests, and scenic landscapes. Your expert guide will lead the way, ensuring a safe and fun experience as you cross rivers and discover hidden natural treasures. With the convenience of private transport, your family will enjoy a smooth and comfortable day of adventure, making unforgettable memories as you explore the island’s wild side in a unique and exciting way.</p>
+            <div class="precio">$900</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
     </main>
