--- a/HIGUEY CITY TOUR PRIVATE.html
+++ b/HIGUEY CITY TOUR PRIVATE.html
@@ -125,31 +125,30 @@
     <main>
         <div class="producto-card">
             <img src="paginas/higuey2.jpg" alt="Producto 1">
-            <h3>Producto 1</h3>
-            <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
-            <div class="precio">$150</div>
+            <h3>1 PAX</h3>
+            <p>Enjoy a fascinating excursion through the Dominican Republic, starting with a visit to a coffee and cacao plantation. Learn about the cultivation process before heading to a tobacco factory to see how the product is made. Explore a local market for authentic crafts and culture, followed by a tour of an ancient church showcasing the country’s history. End with an optional visit to the beautiful Macao Beach for some relaxation</p>
+            <div class="precio">$120</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
-            </a>
+                BOOKING NOW </a>
         </div>
 
         <div class="producto-card">
             <img src="paginas/higuey3.jpg" alt="Producto 2">
-            <h3>Producto 2</h3>
-            <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
-            <div class="precio">$200</div>
+            <h3>2 PAX </h3>
+            <p>Enjoy a fascinating excursion through the Dominican Republic, starting with a visit to a coffee and cacao plantation. Learn about the cultivation process before heading to a tobacco factory to see how the product is made. Explore a local market for authentic crafts and culture, followed by a tour of an ancient church showcasing the country’s history. End with an optional visit to the beautiful Macao Beach for some relaxation.</p>
+            <div class="precio">$140</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="paginas/higuey4.jpg" alt="Producto 3">
-            <h3>Producto 3</h3>
-            <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
-            <div class="precio">$120</div>
+            <h3>1 PAX PRIVATY</h3>
+            <p>Experience a private and personalized excursion through the Dominican Republic, tailored just for you. Start with an exclusive visit to a coffee and cacao plantation, where you’ll learn about the cultivation process firsthand. Then, enjoy a private tour of a tobacco factory, seeing how this traditional product is made. Explore a local market at your own pace, and discover authentic crafts and culture. Visit an ancient church rich in history, before finishing with a relaxing, optional stop at Macao Beach. This customizable journey ensures a truly unique and intimate experience.</p>
+            <div class="precio">$110</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
     </main>
