--- a/Hacienda park.html
+++ b/Hacienda park.html
@@ -125,32 +125,30 @@
     <main>
         <div class="producto-card">
             <img src="paginas/hacienda3.jpg" alt="Producto 1">
-            <h3>Producto 1</h3>
-            <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
-            <div class="precio">$150</div>
+            <h3>1 PAX</h3>
+            <p>Embark on a thrilling 7-in-1 adventure with transport and a dedicated guide. Start with a scenic horseback ride through stunning landscapes, followed by a thrilling buggy safari tour. Experience nature up close as you zipline across the beautiful terrain. Enjoy a delicious traditional lunch, then cool off with a refreshing swim in a nearby river. Finally, visit a typical house surrounded by plantations to learn about local culture and agriculture. This all-inclusive experience combines adventure, nature, and authentic culture, all tailored just for you. </p>
+            <div class="precio">$99</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
-            </a>
+                BOOKING NOW  </a>
         </div>
 
         <div class="producto-card">
             <img src="paginas/hacienda1.webp" alt="Producto 2">
-            <h3>Producto 2</h3>
-            <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
-            <div class="precio">$200</div>
+            <h3>2 PAX</h3>
+            <p>Embark on a thrilling 7-in-1 adventure with transport and a dedicated guide. Start with a scenic horseback ride through stunning landscapes, followed by a thrilling buggy safari tour. Experience nature up close as you zipline across the beautiful terrain. Enjoy a delicious traditional lunch, then cool off with a refreshing swim in a nearby river. Finally, visit a typical house surrounded by plantations to learn about local culture and agriculture. This all-inclusive experience combines adventure, nature, and authentic culture, all tailored just for you.</p>
+            <div class="precio">$198</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="paginas/hacienda2.jpg" alt="Producto 3">
-            <h3>Producto 3</h3>
-            <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
-            <div class="precio">$120</div>
+            <h3>10 PAX</h3>
+            <p>Enjoy a private 7-in-1 adventure with exclusive transport and a personal guide. Begin with a scenic horseback ride through beautiful landscapes, followed by an exciting buggy safari. Experience the thrill of ziplining through nature, then savor a delicious traditional lunch. Cool off with a swim in a refreshing river and explore a typical house surrounded by plantations, learning about the local culture and agriculture. This customized excursion offers a perfect mix of adventure, relaxation, and cultural discovery, all in comfort and style.</p>
+            <div class="precio">$990</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
-            </a>
+                BOOKING NOW  </a>
         </div>
     </main>
 
