--- a/isla-catalina-and-snorkel.html
+++ b/isla-catalina-and-snorkel.html
@@ -127,31 +127,32 @@
     <main>
         <div class="producto-card">
             <img src="assets/img/snorkel1.jpg" alt="Producto 1">
-            <h3>Producto 1</h3>
-            <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
-            <div class="precio">$150</div>
+            <h3>1 PAX</h3>
+            <p>Embark on an exciting motomaran adventure with included transport for your convenience. Enjoy snorkeling in crystal-clear waters, discovering vibrant marine life. Refresh yourself with a variety of drinks available throughout the journey. Savor a delicious lunch while soaking in the unique surroundings. A knowledgeable guide will accompany you, providing insights about the area, while lively music and entertainment keep the atmosphere fun and festive throughout the experience.</p>
+            <div class="precio">$60</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/snorkel2.jpg" alt="Producto 2">
-            <h3>Producto 2</h3>
-            <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
-            <div class="precio">$200</div>
+            <h3>2 PAX </h3>
+            <p>Embark on an exciting motomaran adventure with included transport for your convenience. Enjoy snorkeling in crystal-clear waters, discovering vibrant marine life. Refresh yourself with a variety of drinks available throughout the journey. Savor a delicious lunch while soaking in the unique surroundings. A knowledgeable guide will accompany you, providing insights about the area, while lively music and entertainment keep the atmosphere fun and festive throughout the experience.</p>
+            <div class="precio">$120</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/snorkel3.jpg" alt="Producto 3">
-            <h3>Producto 3</h3>
-            <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
-            <div class="precio">$120</div>
+            <h3>10 PAX</h3>
+            <p>Experience a personalized motomaran adventure with exclusive private transport. Dive into the clear waters for an unforgettable snorkeling experience, exploring the vibrant underwater world. Enjoy refreshing drinks throughout the journey and indulge in a delicious lunch. A professional guide will provide detailed information about the area, while music and entertainment enhance the lively, festive atmosphere, ensuring a truly memorable day tailored just for you.</p>
+            
+            <div class="precio">$600 </div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
     </main>
