--- a/los-haitises.html
+++ b/los-haitises.html
@@ -128,31 +128,31 @@
     <main>
         <div class="producto-card">
             <img src="assets/img/haitises1.webp" alt="Producto 1">
-            <h3>Producto 1</h3>
+            <h3>1 PAX</h3>
             <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
             <div class="precio">$150</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/haitises2.webp" alt="Producto 2">
-            <h3>Producto 2</h3>
+            <h3>2 PAX </h3>
             <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
             <div class="precio">$200</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/haitises3.webp" alt="Producto 3">
-            <h3>Producto 3</h3>
+            <h3>10 PAX</h3>
             <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
             <div class="precio">$120</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
     </main>
