--- a/samana-island.html
+++ b/samana-island.html
@@ -125,31 +125,32 @@
     <main>
         <div class="producto-card">
             <img src="assets/img/samanaisla1.jpg" alt="1 pax">
-            <h3>Producto 1</h3>
-            <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
+            <h3>1 PAX</h3>
+            <p>Enjoy a thrilling excursion with transport, a professional guide, and all the essentials for an unforgettable day. Begin your journey with a visit to Cayo Levantado, where you can relax on pristine beaches. Then, embark on an exciting safari adventure, discovering the beauty of the local nature. Explore the surroundings on horseback, followed by a visit to the stunning El Limón Waterfall. Along the way, you'll enjoy a delicious lunch and refreshing drinks, offering an immersive experience in the Dominican Republic's natural wonders.</p>
             <div class="precio">$90US</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/samanaisla2.jpg" alt="2 PAX">
-            <h3>Producto 2</h3>
-            <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
+            <h3>2 Pax</h3>
+            <p>Enjoy a thrilling excursion with transport, a professional guide, and all the essentials for an unforgettable day. Begin your journey with a visit to Cayo Levantado, where you can relax on pristine beaches. Then, embark on an exciting safari adventure, discovering the beauty of the local nature. Explore the surroundings on horseback, followed by a visit to the stunning El Limón Waterfall. Along the way, you'll enjoy a delicious lunch and refreshing drinks, offering an immersive experience in the Dominican Republic's natural wonders.</p>
+           
             <div class="precio">$180US</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+               BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/samanaisla3.jpg" alt="10 PAX">
-            <h3>Producto 3</h3>
-            <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
+            <h3>10 pax</h3>
+            <p>Experience a personalized excursion with exclusive private transport, a professional guide, and everything you need for a memorable day. Start your journey with a visit to the beautiful Cayo Levantado, where you can unwind on its pristine beaches. Continue with an exciting safari, exploring the local wildlife and natural beauty. Ride horseback through the stunning landscape, then visit the breathtaking El Limón Waterfall. Relish a delicious lunch and refreshing drinks along the way, ensuring a unique and unforgettable experience with the comfort of private transport.</p>
             <div class="precio">$900</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                Reservar ahora
+                BOOKING NOW
             </a>
         </div>
     </main>
