--- a/index.html
+++ b/index.html
@@ -357,10 +357,23 @@ html[lang="es"] {
             <img src="assets/img/Mercado-Modelo-@conoce_rd-edited-scaled.jpg" alt="SHOPPING">
         </a>
         <h2><a href="SHOPPING.html">Shopping </a></h2>
-        <p>Enjoy a unique shopping experience with a variety of stores and exclusive products. 
-
-            .</p>
+        <p>Enjoy a unique shopping experience with a variety of stores and exclusive products.</p>
     </div>
+    <div class="platilloos tours">
+        <a href="haitises.html">
+            <img src="assets/img/haitises1.webp" alt="SHOPPING">
+        </a>
+        <h2><a href="haitises.html">haitises </a></h2>
+        <p>Explore the Haitises, a natural paradise full of breathtaking landscapes and mangroves. </p>
+    </div>
+    <div class="platilloos tours">
+        <a href="titanboatpuntacana.html">
+            <img src="paginas/Punta-Cana-Party-Boat-Tour.jpg" alt="SHOPPING">
+        </a>
+        <h2><a href="titanboatpuntacana.html">Titan boat puntacana. </a></h2>
+        <p>Enjoy an amazing experience on a titan boat puntacana. </p>
+    </div>
+    
 
 
 
