--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ html[lang="es"] {
             <img src="assets/img/Isla-Catalina2.jpg" alt="isla-catalina-and-snorkel">
         </a>
         <h2><a href="isla-catalina-and-snorkel.html">isla catalina and snorkel</a></h2>
-        <p>Disfruta de las aguas cristalinas en Catalina.</p>
+        <p>Enjoy the crystal clear waters in Catalina.</p>
     </div>
 
     <div class="platilloo Island">
